@@ -6,6 +6,7 @@ version 0.4.9
 * Support to complex binary strings as input format.
 * Force to `config.op_input_size='best'` when power operation has an constant operator (non-Fxp). Add warning message. (issue #89).
 * Selection of `prefix` for binary and hexadecimal representations.
+* Fix `cumsum` function bug when dealing with sizes bigger than 32 bits (windows) / 64 bits (linux) (issue #76).
 
 version 0.4.8
 --------------------------------------------------
